webrtc/media/engine/webrtcvoiceengine.h
@@ -262,7 +262,6 @@ class WebRtcVoiceMediaChannel final : public VoiceMediaChannel,
   bool playout_ = false;
   bool send_ = false;
   webrtc::Call* const call_ = nullptr;
-  webrtc::Call::Config::BitrateConfig bitrate_config_;
 
   // Queue of unsignaled SSRCs; oldest at the beginning.
   std::vector<uint32_t> unsignaled_recv_ssrcs_;
