webrtc/media/engine/webrtcvoiceengine_unittest.cc
@@ -1533,16 +1533,16 @@ TEST_F(WebRtcVoiceEngineTestFake, SetSendCodecsCapsMinAndStartBitrate) {
 }
 
 TEST_F(WebRtcVoiceEngineTestFake,
-       SetMaxSendBandwidthShouldPreserveOtherBitrates) {
+       SetMaxSendBandwidthForAudioDoesntAffectBwe) {
   SetSendCodecsShouldWorkForBitrates("100", 100000, "150", 150000, "200",
                                      200000);
-  send_parameters_.max_bandwidth_bps = 300000;
+  send_parameters_.max_bandwidth_bps = 100000;
   SetSendParameters(send_parameters_);
   EXPECT_EQ(100000, call_.GetConfig().bitrate_config.min_bitrate_bps)
       << "Setting max bitrate should keep previous min bitrate.";
   EXPECT_EQ(-1, call_.GetConfig().bitrate_config.start_bitrate_bps)
       << "Setting max bitrate should not reset start bitrate.";
-  EXPECT_EQ(300000, call_.GetConfig().bitrate_config.max_bitrate_bps);
+  EXPECT_EQ(200000, call_.GetConfig().bitrate_config.max_bitrate_bps);
 }
 
 // Test that we can enable NACK with opus as caller.
